--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "turbo run lint",
     "test": "turbo run test",
     "prepare": "husky install",
+    "changeset": "changeset",
+    "version:changeset": "changeset version",
+    "publish:changeset": "changeset publish",
     "clean": "turbo run clean && rm -rf node_modules",
     "format": "prettier --write \"**/*.{ts,tsx,js,jsx,json,md}\""
   },
@@ -30,7 +33,8 @@
     "husky": "^8.0.0",
     "lint-staged": "^14.0.0",
     "@commitlint/config-conventional": "^17.5.0",
-    "@commitlint/cli": "^17.5.0"
+    "@commitlint/cli": "^17.5.0",
+    "@changesets/cli": "^2.26.0"
   },
   "lint-staged": {
     "packages/*/src/**/*.{ts,tsx,js,jsx}": [
