--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -7,9 +7,23 @@
   "scripts": {
     "dev": "tsc --watch",
     "build": "tsc",
+    "prepare": "npm run build",
     "test": "vitest run --passWithNoTests",
     "lint": "eslint \"src/**/*.ts\"",
     "clean": "rm -rf dist"
+  },
+  "files": [
+    "dist"
+  ],
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "default": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "publishConfig": {
+    "access": "restricted"
   },
   "devDependencies": {
     "eslint": "^10.0.0",
