feat(admin): scaffold admin backend app (Fastify, tsconfig, Dockerfile, env, README)

--- a/.gitignore
+++ b/.gitignore
@@ -31,4 +31,9 @@ report.[0-9]_.[0-9]_.[0-9]_.[0-9]_.json
 .idea
 
 # Finder (MacOS) folder config
+
+# Env files
+.env.local
+.env.*.local
+.env
 .DS_Store
